1999-11-12  Sam Steingold  <sds@ksp.com>

	* calendar/calendar.el (calendar-remove-frame-by-deleting):
	New user variable.
	(calendar-hide-window): Use it.
	(increment-calendar-month, calendar-for-loop, calendar-sum):
	Use the new backquote syntax.

1999-11-12  Andrew Innes  <andrewi@gnu.org>

	* select.el (x-set-selection): Call buffer-substring, not
	substring.  Also fix docstring

1999-11-12  Peter Kleiweg  <kleiweg@let.rug.nl>

	* progmodes/ps-mode.el (ps-mode-submit-bug-report): Added list
	of customizable variables to bug report message. Added
	system-type to package name in bug report.

1999-11-12  Gerd Moellmann  <gerd@gnu.org>

	* buff-menu.el (list-buffers-noselect): Use abbreviate-file-name
	to display file names.

1999-11-11  Gerd Moellmann  <gerd@gnu.org>

	* mwheel.el: Fix copyright notice, don't require 'cl at run time.

	* isearch.el: Add lazy-highlighting feature.

1999-11-10  Peter Kleiweg  <kleiweg@let.rug.nl>

	* progmodes/ps-mode.el (ps-mode-maintainer-address): New
        constant.
	(ps-mode-submit-bug-report): New function. Entry added to menu.

1999-11-10  William M. Perry  <wmperry@aventail.com>

	* mwheel.el: New file to support the new style wheeled mice.

1999-11-10  Gerd Moellmann  <gerd@gnu.org>

	* startup.el (initial-scratch-message): Add ";;" to the front of
	lines in the message.

	* files.el (file-local-copy): Remove optional BUFFER argument
	because that's not used by anything.

	* mail/mh-comp.el (mh-smail-batch): If TO is nil, use "" as
	to-address.

1999-11-08  Markus Rost  <rost@ias.edu>

	* wid-edit.el (widget-button-click): Wrap with save-excursion
	to restore track-mouse in the correct buffer.

1999-11-08  Gerd Moellmann  <gerd@gnu.org>

	* mail/mh-e.el: Changed maintainer to billcurtis@hotmail.com.

1999-11-08  Peter Kleiweg  <kleiweg@let.rug.nl>

	* progmodes/ps-mode.el (ps-mode-print-function): Changed default
	lpr-command to "lp" for some system-types. (copied from lpr.el
	Emacs version 20.2.1).
